docs/example-ingress/3_ingress-port.yaml
# Example of an Ingress with a different HTTP port
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-diff-port
  annotations:
    alb.stackit.cloud/http-port: "8080"
spec:
  ingressClassName: stackit-alb
  rules:
  - host: port.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-diff-port
            port:
              number: 80
---
# Deployment, Service for the example
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-diff-port
spec:
  selector:
    matchLabels:
      app: app-diff-port
  template:
    metadata:
      labels:
        app: app-diff-port
    spec:
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo
---
apiVersion: v1
kind: Service
metadata:
  name: svc-diff-port
spec:
  type: NodePort
  selector:
    app: app-diff-port
  ports:
  - port: 80
    targetPort: 9898
