docs/example-ingress/5_ingress-secure.yaml
# Example of an Ingress with a self singed certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-secure
  annotations:
    alb.stackit.cloud/https-only: "true"
spec:
  ingressClassName: stackit-alb
  tls:
  - hosts:
    - secure.example.com
    secretName: self-signed-cert
  rules:
  - host: secure.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-secure
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-secure
spec:
  selector:
    matchLabels:
      app: app-secure
  template:
    metadata:
      labels:
        app: app-secure
    spec:
      serviceAccountName: cert-generator-sa
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo
---
apiVersion: v1
kind: Service
metadata:
  name: svc-secure
spec:
  type: NodePort
  selector:
    app: app-secure
  ports:
  - port: 80
    targetPort: 9898
